--- a/src/Components/AboutCats/AboutCats.css
+++ b/src/Components/AboutCats/AboutCats.css
@@ -66,7 +66,19 @@
     .dugmici{
         display:none;
     }
+    .pFirst{
+        font-size: 1.2rem;
+    }
+    .div-citati{
+        margin-bottom: 5px;
+    }
+    .slider{
+        height: 120px;
+    }
+    .slider-item{
+        font-size: 0.9rem;
+    }
     .aboutCats-div{
-        height: 250px;
+        height: 200px;
     }
 }
