--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -20,6 +20,7 @@
 @media only screen and (max-width : 991px) {
     .header-div{
         flex-direction: column;
+        justify-content: start;
     }
     .header-img{
         width: 100%;
@@ -27,7 +28,4 @@
         margin-top: 0;
         padding: 15px;
     }
-}
-@media only screen and (max-width: 600px) {
-
 }
